--- a/Chreg.css
+++ b/Chreg.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(genova_porto_ph-merlo_110920-7641.jpg) ;
+    background-image: url(2017010865813-genova.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
